Fix scrollbar on chromium based browsers

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,24 +10,6 @@
     --hovered-orange: #ff8811;
 }
 
-::-webkit-scrollbar {
-  width: 6px; 
-}
-
-::-webkit-scrollbar-track {
-  background: #f0f0f0; 
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #b0b0b0; 
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #909090; 
-}
-
 .project {
     font-size: 6rem;
     font-weight: bold;
@@ -42,4 +24,22 @@
 
 .project.selected {
     color: white;
+}
+
+
+/*SCROLLBAR*/
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #303030; 
+}
+
+::-webkit-scrollbar-thumb {
+  background: #303030; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: black; 
 }
